# conan-openssl

./: .gitignore  .travis.yml  FindOpenSSL.cmake  FindOpenSSL_less_3.7.cmake  FindPackageHandleStandardArgs.cmake  LICENSE  OriginalFindOpenSSL_3_8.cmake  README.md  SelectLibraryConfigurations.cmake  appveyor.yml  azure-pipelines.yml  build.py  build_with_docker.py  conanfile.py
.ci/: configure-hooks.yml  install-cmake.yml  install-python.yml  remove_openssl.py
.circleci/: config.yml
.travis/: install.sh
test/: CMakeLists.txt  conanfile.py  md5.cpp
test_package/: CMakeLists.txt  conanfile.py  digest.cpp  md5.cpp
